--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="Style/G3.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
-            <h3 class="brand"> G3 Architects </h3>
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">                                                    
+                <li class="nav-item"><a href="" class="nav-link text-gray"></a>Home</li>
+                <li class="nav-item"><a href="" class="nav-link text-gray"></a>About</li>
+                <li class="nav-item"><a href="" class="nav-link text-gray"></a>Contact Us </li>
+                <li class="nav-item"><a href="" class="nav-link text-gray"></a>Login</li>
+            </ul>
+
         </nav>
+        <div class="banner">
+            <h1 class="banner-title">Brand New Group of Architects </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btm-primary">Explore More</button>
+            <img src="images/banner.png" alt="">
+
+        </div>
     </header>
     <main>
 
