--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
         </section>
-        <!-- feature will enjoy -->
+        <!-- some facts -->
          <section>
             <h3 class="section-tittle">Some Facts</h3>
             <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -63,14 +63,14 @@
                         <h5 class="fact-name">Project Finished</h5>
                     </div>
                 </div>
-                <div class="fact-card">
+                <div class="fact-card display-flex">
                     <div>
                         <img src="images/icons/customers.png" alt="" class="fact-icon">
                         <h4 class="fact-number">590</h4>
                          <h5 class="fact-name">Clients Worked</h5>
                     </div>
                 </div>
-                <div class="fact-card">
+                <div class="fact-card display-flex">
                     <div>
                         <img src="images/icons/email.png" alt=""  class="fact-icon">
                          <h4 class="fact-number">22578</h4>
@@ -79,9 +79,20 @@
                 </div>
             </div>
          </section>
-         <!-- some facts -->
-          <section>
-
+         <!-- <our sponsor --> 
+          <section class="our=sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-tittle">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png">
+                <img src="images/sponsors/amazon.png">
+                <img src="images/sponsors/google.png">
+                <img src="images/sponsors/telerama.png">
+                <img src="images/sponsors/figma.png">
+            </div>
           </section>
     </main>
     <footer>
