--- a/index.html
+++ b/index.html
@@ -44,6 +44,38 @@
             </div>
 
         </section>
+        <!-- feature section  -->
+            <section class="feature display-flex">
+                <div>
+                    <h3 id="feature-section-titlle" class="section-title">Features you will <br>love & enjoy</h3>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <!-- feature card container -->
+                     <div class="feature-card">
+                        <h4 class="feature-titlle">Dexktop & Mobile Version</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="feature-card">
+                        <h4 class="feature-titlle">Drag & Drop Builder</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="feature-card">
+                        <h4 class="feature-titlle">Awesome Modern Design</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="feature-card">
+                        <h4 class="feature-titlle">Super Easy to Edit</h4>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                </div>
+
+                <div>
+                    <img src="images/architect.png">
+                   <button id="experience badge" class="btn-primary"><span id="experience">10+Years</span><br>
+                    <span>Experience</span>
+                </div>
+                    
+            </section>
         <!-- some facts -->
          <section>
             <h3 class="section-tittle">Some Facts</h3>
